@@ -36,6 +36,18 @@ extern "C" {
 #endif
 
 /*
+ *  These are no longer prototyped anywhere else. This appears to be
+ *  remnants of the IRQ code upgrade.
+ *
+ *  --joel 28 April 2010
+ */
+int CPU_install_rtems_irq_handler(const rtems_irq_connect_data* irq);
+int CPU_get_current_rtems_irq_handler(rtems_irq_connect_data* irq);
+int CPU_remove_rtems_irq_handler(const rtems_irq_connect_data* irq);
+int CPU_rtems_irq_mngt_set(rtems_irq_global_settings* config);
+int CPU_rtems_irq_mngt_get(rtems_irq_global_settings** config);
+
+/*
  * The SS555 has no external interrupt controller chip, so use the standard
  * routines from the CPU-dependent code.
  */
