@@ -1,3 +1,7 @@
+2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	* irq/irq.h, startup/iss555.c, startup/tm27supp.c: Remove warnings.
+
 2010-03-27	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
 
 	* startup/start.S: remove bootcard calling warning
